# ltlf-synth-unrel-input-aaai2025

./: README.md  lint_tests.py
Syft/: CMakeLists.txt  INSTALL.md  build.sh
Syft/CMakeModules/: FindCUDD.cmake
Syft/src/: CMakeLists.txt
Syft/src/qltlf2mso/: CMakeLists.txt  fromPartToQltlf.py  ltl_formula.h  ltlf2fol.cpp  ltlf2fol.h  ltllexer.l  ltlparser.y  main.cpp  out.qltlf  translate.cpp  utility.cpp
Syft/src/synthesis/: CMakeLists.txt  CoRDFA_syn.cpp  CoRDFA_syn.h  Common.h  DFA.cpp  DFA.h  SSNFA.cpp  SSNFA.h  main.cpp  syn.cpp  syn.h  synStrategy.cpp
generators/: README.md  generator.py  graph.py  hiker.py  make_tests.py  moveGraphTest.py  requirements.txt  sheep.py  utils.py
generators/examples-graph/: trap-a2-solv  trap-a4-unsolv  trap-a4-variant  trap-a5-unsolv  trap-a6-unsolv  trap-a7-unsolv  trap-a9-solv  trap-lin-4  trap-lin-6  trap-normal-unsolv  trap-solv-full-1  trap-solv-normal-solv  trap-solv-nornal-usolv-part  trap-unsolv-a1  trap-unsolv-a8  trapfree-unsolv
scripts/results/: analyse_mso_approaches.py  fetch-results.sh  getfiles.sh  mso_without_backup.csv  mso_without_main.csv  process.py  results-belief.csv  results-direct.csv  results-mso.csv  runTests-cross.py  runTests-parallel.py  runtime_hiker.pgf  runtime_other.pgf  runtime_sheep.pgf  runtime_trap.pgf
scripts/runTests/: mso_without_main.csv  results-belief.csv  results-direct.csv  results-mso.csv  runTests-bmn.py  runTests-parallel.py  runTests.py
tests/conflict-really-simple/: conflict.ltlf  conflict.part
tests/hiker-10-solv/: hiker-10-solv.ltlf  hiker-10-solv.ltlf.backup.mona  hiker-10-solv.ltlf.dfa  hiker-10-solv.ltlf.fol  hiker-10-solv.ltlf.main.mona
tests/hiker-10-unsolv/: hiker-10-unsolv.ltlf  hiker-10-unsolv.ltlf.dfa
tests/hiker-15-solv/: hiker-15-solv.ltlf  hiker-15-solv.ltlf.dfa
tests/hiker-15-unsolv/: hiker-15-unsolv.ltlf  hiker-15-unsolv.ltlf.dfa
tests/hiker-20-solv/: hiker-20-solv.ltlf  (+1 more)
(+136 files in other folders)
